# Clueless

./: README.md  board.py  board_enums.py  game_test.py  main.py  pyproject.toml  theme.json
client/: client.py  client_game_manager.py  client_player.py
clueless/client/: client.py  client_game_manager.py  client_player.py  client_view_manager.py  connection.py  palette.py  ui_elements.py  ui_enums.py  view.py
clueless/messages/: messages.py
clueless/model/: board.py  board_enums.py  card.py  player.py  suggestion.py
clueless/server/: game_manager.py  server.py  server_player.py
documentation/: app_architecture.md  ui_breakdown.md
messages/: messages.py
model/: board.py  board_enums.py  card.py  player.py  suggestion.py
server/: game_manager.py  player.py  server.py  server_player.py
tests/: game_test.py  messages_test.py
unittests/: game_test.py
