[tool.poetry]
name = "clueless"
version = "0.1.0"
description = "Client/Server implementation of the game Clue"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
